Implement Push Notification System

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Ask Pastor Stefan - Real Talk, Real Answers</title>
     <meta name="description" content="A safe space for young people to ask tough questions about faith, life, and everything in between. Get real answers from Pastor Stefan.">
     <meta name="keywords" content="youth ministry, faith questions, pastor, Christianity, young adults, spiritual guidance">
+    
+    <!-- PWA and Notification Support -->
+    <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#1e293b">
   </head>
   <body>
     <div id="root"></div>
